--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
 	
 	<div class="content">
 		<div class="page-header">
-			<h1>Movie Dnldr &nbsp;<small>Seriously, it's legal.</small></h1>
+			<h1>Movie Dnldr &nbsp;<small>Have you checked netflix yet?</small></h1>
 		</div>
 		<% if session[:message] %>
 		<div class="alert alert-success">
