--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 	
 	<div class="content">
 		<div class="page-header">
-			<h1>Movie Dnldr &nbsp;<small>Have you checked netflix yet?</small></h1>
+			<h1><a href="/">Movie Dnldr </a>&nbsp;<small>Have you checked netflix yet?</small></h1>
 		</div>
 		<% if session[:message] %>
 		<div class="alert alert-success">
